# MorusMD1D

./: CMakeLists.txt  README.md  copyright.txt
data/: demo_LikhtmanMcLeishZe10.sh  demo_StickyDiffusivity.sh  demo_StickyDumbbell.sh  demo_calculate_mu.sh  demo_extensional_flow.sh  demo_sticker_friction.sh
doc/: .gitignore  Manual.md  plot_distr.plt  references.bib
src/: ChainRetraction.h  MuRelaxation.h  compile.sh  main.c  main.h  printHelp.c  printHelp.h
utils/: .gitignore  AnalyseRe.m  StickyDiffusionCoefficient.m  analyseStress.sh  analyseStretch.sh  average_files.sh  average_timeprogress.m  average_timeprogress.sh  getDiffusivityFromAveragedTimeProgress.sh  getStickerDistribution.m  getStress.m  getStretch.m  get_L_from_timeprogress.sh  get_StickyDiffusionCoefficient.m  get_s_av_StressDistribution.sh  get_s_av_StretchDistribution.sh  getmu_from_timeprogress.m  is_gnuplot_installed.sh  is_installed.sh  is_matlab_installed.sh  is_octave_installed.sh  run_mscript.sh
utils/Octave/: .plotTimeScales.plt.swp  BondswapAndAssociationDissociation.m  ReadMe.md  StickyReptation.m  TwoStateStickyDEMG.m  calcChainExtension.m  calcChainExtension_B.m  demo_DoubleReptation.m  fit_dmu_LMtheory.m  get_mu_LMtheory.m
utils/Octave/DoubleReptation/: Precalculations
utils/Octave/GLaMM/: pde.m
utils/Octave/LikhtmanMcLeish/: Gt_LikhtmanMcLeish.m  Gt_StickyLikhtmanMcLeish.m  R_LikhtmanMcLeish.m  SCT_LikhtmanMcLeish.m  SCT_Rubinstein.m  checkFig3.m  cost_dmu.m  demo_LikhtmanMcLeish.m  fit_dmu_limits.m  get_eps_star.m  get_renormalisation_elastic_modulus.m  mu_LikhtmanMcLeish.m  (+4 more)
(+1 files in other folders)
